k8s/base/monitoring/alloy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy
  labels:
    app.kubernetes.io/name: alloy
    app.kubernetes.io/instance: alloy
    app.kubernetes.io/component: log-collector
    app.kubernetes.io/part-of: todo-k8s
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: alloy
  ports:
    - name: http-metrics
      port: 12345
      targetPort: http-metrics
      protocol: TCP
    - name: otlp-grpc
      port: 4317
      targetPort: otlp-grpc
      protocol: TCP
